2010-03-09 Thunor <thunorsif_at_hotmail.com>
* Appended z81's Makefile and docs with .z81 and added new files for
  our use since now sz81 is the main target.
* Reorganised some newly added files.

2010-03-08 Thunor <thunorsif_at_hotmail.com>
* Version 2.1-4 released
* An SDL timer now manages timing if sound isn't being enabled from the
  command line or OSS_SOUND_SUPPORT is not enabledwithin the Makefile.

2010-03-05 Thunor <thunorsif_at_hotmail.com>
* Added some additional controls and reorganised them all.
* Shifted the ZX80 screen leftwards 2 chars since it causes problems
  with portrait orientated screens (is that a bug?).

2010-03-03 Thunor <thunorsif_at_hotmail.com>
* Added a control bar with several useful options that appear alongside
  the virtual keyboard.
* Added three Sinclair fonts, two for the control bar and the ZX
  Spectrum's for future use within the GUI.

2010-02-28 Chris Young <cdyoung_at_ntlworld.com>
* Added code for the AmigaOS4 build.

2010-02-27 Thunor <thunorsif_at_hotmail.com>
* Version 2.1-3 released
* Added virtual keyboard opacity adustment and autohide on newline;
  both currently modifiable via keyboard controls.

2010-02-25 Thunor <thunorsif_at_hotmail.com>
* Hotspots now animate when pressed.

2010-02-23 Thunor <thunorsif_at_hotmail.com>
* Hotspot engine for the mouse/stylus is now fully functional (although
  awaiting semi-opaque highlights) and SHIFT can be sticky or a toggle
  (a future runtime modifiable option).

2010-02-18 Thunor <thunorsif_at_hotmail.com>
* Added a hotspot engine for virtual keyboard input.
* Added joystick support for all platforms.

2010-02-17 Thunor <thunorsif_at_hotmail.com>
* Version 2.1-2 released
* Added new keyboard images.
* Emulator now centred regardless of resolution.

2010-02-14 Thunor <thunorsif_at_hotmail.com>
* Version 2.1-1 released - initial stable and fully functioning (except
  OSS sound) SDL port of z81.


