@@ -3,17 +3,17 @@ TARGET=$(shell cat TARGET)
 SOURCES=smain.c common.c sound.c z80.c sdl.c
 OBJECTS=$(patsubst %.c, %.o, $(SOURCES))
 VERSION=$(shell cat VERSION)
-export LIBDIR=.
+export PACKAGE_DATA_DIR=./data
 
 # This uses the GPH GP2XSDK with a different installation directory
 # (the GPH default is /gp2xsdk/Tools and mine is /opt/gp2xsdk) so you
 # will need to modify at least DEVPREFIX below
 DEVPREFIX=/opt/gp2xsdk
 CC=$(DEVPREFIX)/bin/arm-gp2x-linux-gcc
-CFLAGS=-O3 -pipe -Wall -fomit-frame-pointer -I$(DEVPREFIX)/arm-gp2x-linux/include \
+CFLAGS=-O3 -Wall -I$(DEVPREFIX)/arm-gp2x-linux/include \
 	`$(DEVPREFIX)/arm-gp2x-linux/bin/arm-linux-sdl-config --prefix=$(DEVPREFIX) --cflags` \
-	-DPLATFORM_GP2X -DSZ81 -DVERSION=\"$(VERSION)\" -DLIBDIR=\"$(LIBDIR)/\" \
-	-DINLINE_DRAWPIX -DOSS_SOUND_SUPPORT
+	-DPLATFORM_GP2X -DVERSION=\"$(VERSION)\" -DPACKAGE_DATA_DIR=\"$(PACKAGE_DATA_DIR)\" \
+	-DOSS_SOUND_SUPPORT -DSZ81 
 LINK=$(CC)
 LDFLAGS=-L$(DEVPREFIX)/arm-gp2x-linux/lib 
 LIBS=`$(DEVPREFIX)/arm-gp2x-linux/bin/arm-linux-sdl-config --prefix=$(DEVPREFIX) --libs`
@@ -31,4 +31,4 @@ $(TARGET): $(OBJECTS)
 .PHONY: all clean
 
 clean:
-	rm $(OBJECTS)
+	rm -f *.o
